HDX-9812 improve flash_messages & fix horizontal scrollbar on homepage

--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/base/components/header/util.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/base/components/header/util.less
@@ -116,9 +116,23 @@
     }
   }
 }
+
 #homepage-alerts {
   .flash-messages {
     background-color: transparent;
+  }
+
+  .paddingRowHack {
+    margin-left: 0;
+    margin-right: 0;
+
+    .paddingLeftHack {
+      padding-left: 0;
+    }
+
+    .paddingRightHack {
+      padding-right: 0;
+    }
   }
 }
 /* END Style Bootstrap Flash messages*/
